--- a/views/quotes.jade
+++ b/views/quotes.jade
@@ -33,6 +33,6 @@ block content
     else 
         div(class='alert alert-info')
             p 
-                |Sorry. You have not submitted any quotes 
-                a(href='/') back to quotes
-                |.
+                |Sorry. You have not submitted any quotes.
+                //a(href='/') back to quotes
+                //|.
