--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,8 @@ html
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/main.js')
   body
-  
-Change1
+ 
+    
 
     div(class='container' style='width:700px')    
         ul(class='nav nav-pills')
@@ -29,5 +29,9 @@ Change1
                          a(class='nav-link' href='/users/account') account
             li(class='nav-item')
                 a(class='nav-link' href='/admin') admin
+                        
+        block content
 
-           block content
+           
+    block foot
+     include footer
